server side now reads data file and client side retrieve that data as JSON

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security"
   },
   "scripts": {
     "start": "node server.js"
@@ -9,7 +10,6 @@
   "description": "Grub Globe is a web application that provides users with food recipes from around the world. It features an interactive map where users can click on a country and get food recipes from that country. Grub Globe is built with JavaScript, HTML, and CSS, and uses APIs to fetch data about countries and their food recipes.</br>",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/asbaxter/grub-globe.git"
